<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>lightning-operation-platform</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.version>3.6.1</maven.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>
    <packaging>pom</packaging>


    <dependencyManagement>
        <dependencies>
        <dependency>
            <groupId>com.jianyue</groupId>
            <artifactId>lightning-boot-dependencies</artifactId>
            <version>1.0.0-SNAPSHOT</version>
            <type>pom</type>
            <scope>import</scope>
        </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>operation-platform-backend-project</module>
    </modules>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.version}</version>
                <configuration>
                    <compilerArgs>
                        <arg>-J--add-modules=java.base</arg>
                        <arg>-J--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
                        <arg>-J--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>